--- a/css/race.css
+++ b/css/race.css
@@ -8,7 +8,7 @@
     width: 100%;
     height: 50px; /* tinggi baris pohon atas */
     background-image: 
-        url('../images/bg.png'),
+        url('../images/bg3.png'),
         linear-gradient(to bottom, rgba(58,125,58,0) 0%, rgba(58,125,58,0.8) 100%);
     background-repeat: repeat-x; /* ulang horizontal */
     background-size: contain;
@@ -24,7 +24,7 @@
     bottom: 0;
     background-color: #3a7d3a; /* warna hijau dasar */
     background-image: 
-        url('../images/bg.png'),
+        url('../images/bg3.png'),
         linear-gradient(to bottom, rgba(58,125,58,0) 0%, rgba(58,125,58,0.8) 100%);
     background-repeat: repeat, no-repeat;
     background-size: auto 50px, 100% 100%;
